registro de porcos funcionando

--- a/src/app/containers/default-layout/default-header/default-header.component.html
+++ b/src/app/containers/default-layout/default-header/default-header.component.html
@@ -19,8 +19,13 @@
         </a>
       </c-nav-item>
       <c-nav-item>
-        <a cNavLink routerLink="/registration" routerLinkActive="active">
-          Pig Registration
+        <a cNavLink routerLink="/registration/register-pig" routerLinkActive="active">
+          Register Pig
+        </a>
+      </c-nav-item>
+      <c-nav-item>
+        <a cNavLink routerLink="/registration/register-weight" routerLinkActive="active">
+          Register Weight
         </a>
       </c-nav-item>
     </c-header-nav>
