implementado listagem e manipulação dos porcos

--- a/src/app/containers/default-layout/default-header/default-header.component.html
+++ b/src/app/containers/default-layout/default-header/default-header.component.html
@@ -24,8 +24,8 @@
         </a>
       </c-nav-item>
       <c-nav-item>
-        <a cNavLink routerLink="/registration/register-weight" routerLinkActive="active">
-          Register Weight
+        <a cNavLink routerLink="/manager" routerLinkActive="active">
+          Manager Pigs
         </a>
       </c-nav-item>
     </c-header-nav>
