implementado gráfico de monitoramento de peso

--- a/src/app/views/manager/list-pigs/list-pigs.component.html
+++ b/src/app/views/manager/list-pigs/list-pigs.component.html
@@ -71,6 +71,7 @@
           <ul cDropdownMenu>
             <li><button cDropdownItem (click)="editMode(pig)">Edit</button></li>
             <li><button cDropdownItem (click)="addWeightMode(pig)">Add Weight</button></li>
+            <li><button cDropdownItem (click)="chartMode(pig)">See Chart</button></li>
             <li><button cDropdownItem (click)="deleteMode(pig)">Delete</button></li>
           </ul>
         </c-dropdown>
