corrigido problema no filtro do controle de peso

--- a/src/app/containers/default-layout/default-layout.component.html
+++ b/src/app/containers/default-layout/default-layout.component.html
@@ -13,9 +13,9 @@
       alt: 'PigFarm Logo'
     }"
     [brandNarrow]="{
-      src: 'assets/img/brand/coreui-signet-white.svg',
-      width: 46,
-      height: 46,
+      src: 'assets/img/brand/pig.svg',
+      width: 30,
+      height: 30,
       alt: 'PigFarm Logo'
     }"
     routerLink="./"
