--- a/src/app/views/manager/weight-control/weight-control.component.html
+++ b/src/app/views/manager/weight-control/weight-control.component.html
@@ -19,7 +19,7 @@
     </tr>
   </thead>
   <tbody>
-    <tr *ngFor="let wh of weightHistory">
+    <tr *ngFor="let wh of filteredWeightHistory">
       <td>{{ wh.date }}</td>
       <td>{{ wh.weight }}</td>
       <td>
