--- a/src/app/views/manager/weight-control/weight-control.component.html
+++ b/src/app/views/manager/weight-control/weight-control.component.html
@@ -1,8 +1,7 @@
 <c-row class="g-3">
   <c-col [sm]="12" [md]="6" [lg]="4">
     <label for="dateFilter">Filter by Date:</label>
-    <input class="form-control" type="date" id="dateFilter" [(ngModel)]="dateFilter"
-      (input)="applyFilters()">
+    <input class="form-control" type="date" id="dateFilter" [(ngModel)]="dateFilter" (input)="applyFilters()">
   </c-col>
   <c-col [sm]="12" [md]="6" [lg]="4">
     <label for="weightFilter">Filter by Weight:</label>
@@ -10,33 +9,130 @@
   </c-col>
 </c-row>
 
-<table cTable>
-  <thead cTableColor="light">
-    <tr>
-      <th scope="col">Date</th>
-      <th scope="col">Weight</th>
-      <th scope="col">Actions</th>
-    </tr>
-  </thead>
-  <tbody>
-    <tr *ngFor="let wh of filteredWeightHistory">
-      <td>{{ wh.date }}</td>
-      <td>{{ wh.weight }}</td>
-      <td>
-        <c-dropdown variant="btn-group">
-          <button cButton cDropdownToggle color="secondary" size="sm">
-            <svg cIcon name="cil-settings"></svg>
-          </button>
-          <ul cDropdownMenu>
-            <li><button cDropdownItem (click)="editWeight(wh)">Edit</button></li>
-          </ul>
-        </c-dropdown>
-      </td>
-    </tr>
-  </tbody>
-</table>
+<c-row class="mt-4">
+  <c-col xs>
+    <c-card class="mb-4">
+      <c-card-header>
+        Selected Pig
+        <button cButton color="primary" class="float-end" size="sm" (click)="showChart()">See Chart</button>
+      </c-card-header>
+      <c-card-body>
 
-<c-modal id="addWeightModal" [visible]="modalVisible" (visibleChange)="handleModalChange($event)">
+
+        <table [hover]="true" [responsive]="true" [striped]="true" align="middle" cTable class="mb-0 border">
+
+          <thead cTableColor="light">
+            <tr>
+              <th class="text-center">
+                <svg cIcon name="cilAnimal"></svg>
+              </th>
+              <th class="text-center">Identifier</th>
+              <th class="text-center">Age</th>
+              <th class="text-center">Parents</th>
+              <th class="text-center">Status</th>
+            </tr>
+          </thead>
+          <tbody>
+
+            <tr>
+
+              <td class="text-center">
+                <c-avatar size="md" src="{{ avatar }}"></c-avatar>
+                <div class="small text-medium-emphasis text-nowrap">
+                  <span>
+                    {{ pigSelected.gender }}
+                  </span>
+                </div>
+              </td>
+
+              <td class="text-center">
+                <div>{{ pigSelected.identifier }}</div>
+              </td>
+
+              <td class="text-center">
+                <div>
+                  Birth: {{ pigSelected.date_birth | formatDate }}
+                </div>
+                <div class="small text-medium-emphasis text-nowrap">
+                  <span>
+                    {{ pigSelected.date_birth | calculateAge }}
+                  </span>
+                </div>
+              </td>
+
+
+              <td class="text-center">
+                <div class="small text-nowrap">
+                  Father ID: {{ pigSelected.father_id }}
+                </div>
+                <div class="small text-nowrap">
+                  Mother ID: {{ pigSelected.mother_id }}
+                </div>
+              </td>
+
+              <td class="text-center">
+                <div>{{ pigSelected.status }}</div>
+                <div class="small text-medium-emphasis text-nowrap">
+                  <span>
+                    Exit: {{ pigSelected.date_exit | formatDate }}
+                  </span>
+                </div>
+              </td>
+            </tr>
+          </tbody>
+        </table>
+
+      </c-card-body>
+    </c-card>
+  </c-col>
+</c-row>
+
+<c-row class="mt-4">
+  <c-col xs>
+    <c-card class="mb-4">
+      <c-card-header>
+        Weight History
+        <button cButton color="primary" class="float-end" size="sm" (click)="addWeightMode(pigSelected)">Add Weight</button>
+      </c-card-header>
+      <c-card-body>
+
+        <table [hover]="true" [responsive]="true" [striped]="true" align="middle" cTable class="mb-0 border">
+
+          <thead cTableColor="light">
+            <tr>
+              <th>Date</th>
+              <th>Weight</th>
+              <th class="text-center">Actions</th>
+            </tr>
+          </thead>
+          <tbody>
+
+            <tr *ngFor="let wh of filteredWeightHistory">
+
+              <td>{{ wh.date | formatDate }}</td>
+
+              <td>{{ wh.weight }} kg</td>
+
+              <td class="text-center">
+                <c-dropdown variant="btn-group">
+                  <button cButton cDropdownToggle color="secondary" size="sm">
+                    <svg cIcon name="cil-settings"></svg>
+                  </button>
+                  <ul cDropdownMenu>
+                    <li><button cDropdownItem (click)="editWeight(wh)">Edit</button></li>
+                    <li><button cDropdownItem (click)="deleteMode(wh)">Delete</button></li>
+                  </ul>
+                </c-dropdown>
+              </td>
+            </tr>
+          </tbody>
+        </table>
+      </c-card-body>
+    </c-card>
+  </c-col>
+</c-row>
+
+<c-modal id="editWeightModal" [visible]="modalVisible" (visibleChange)="handleModalChange($event)">
   <form cForm [formGroup]="formEditWeight">
     <c-modal-body>
       <c-row class="mb-1">
@@ -92,3 +188,82 @@
     </c-modal-footer>
   </form>
 </c-modal>
+
+<c-modal id="addWeightModal" [visible]="modalAddVisible" (visibleChange)="handleAddWeight($event)">
+  <c-modal-header>
+    <h5 cModalTitle>Add Weight</h5>
+    <button (click)="toggleAddWeight()" cButtonClose></button>
+  </c-modal-header>
+  <form cForm [formGroup]="formAddWeight">
+
+    <c-modal-body>
+      <c-row class="mb-1">
+        <label [sm]="4" cCol cLabel="col" for="date">Weighing Date</label>
+        <c-col *ngIf="formAddWeight.controls['date'] as ctrl" [sm]="8">
+          <input [valid]="
+                ctrl.touched && ctrl.valid
+                  ? true
+                  : (weightSubmitted || ctrl.touched) && ctrl.invalid
+                  ? false
+                  : undefined
+              " autocomplete="off" cFormControl formControlName="date" id="date" placeholder="Weighing Date" required
+            type="date" />
+          <c-form-feedback *ngIf="weightSubmitted || ctrl.invalid" [valid]="!(weightSubmitted || ctrl.invalid)">
+            <ng-container *ngIf="ctrl.errors as errors">
+              <div *ngIf="errors['required']">Weighing date is required</div>
+              <div *ngIf="errors['pattern']">
+                {{ formErrors['date'].pattern }}
+              </div>
+            </ng-container>
+          </c-form-feedback>
+        </c-col>
+      </c-row>
+
+      <c-row class="mb-1">
+        <label [sm]="4" cCol cLabel="col" for="weight">weight</label>
+        <c-col *ngIf="formAddWeight.controls['weight'] as ctrl" [sm]="8">
+          <input [valid]="
+                ctrl.touched && ctrl.valid
+                  ? true
+                  : (weightSubmitted || ctrl.touched) && ctrl.invalid
+                  ? false
+                  : undefined
+              " autocomplete="off" cFormControl formControlName="weight" id="weight" placeholder="weight" required
+            type="text" />
+          <c-form-feedback *ngIf="weightSubmitted || ctrl.invalid" [valid]="!(weightSubmitted || ctrl.invalid)">
+            <ng-container *ngIf="ctrl.errors as errors">
+              <div *ngIf="errors['required']">weight is required</div>
+              <div *ngIf="errors['pattern']">
+                {{ formErrors['weight'].pattern }}
+              </div>
+            </ng-container>
+          </c-form-feedback>
+        </c-col>
+      </c-row>
+
+    </c-modal-body>
+
+    <c-modal-footer>
+      <button (click)="cancelAddWeight()" cButton color="secondary">
+        Cancel
+      </button>
+      <button cButton color="primary" (click)="addWeight()">Confirm</button>
+
+    </c-modal-footer>
+  </form>
+</c-modal>
+
+<c-modal id="deleteModal" [visible]="modalDelete" (visibleChange)="handleDeleteMode($event)">
+  <c-modal-header>
+    <h5 cModalTitle>Delete Weight</h5>
+    <button (click)="toggleDeleteMode()" cButtonClose></button>
+  </c-modal-header>
+  <c-modal-body>Are you sure you want to delete this weight?</c-modal-body>
+  <c-modal-footer>
+    <button (click)="cancelDelete()" cButton color="secondary">
+      Cancel
+    </button>
+    <button cButton color="primary" (click)="confirmDelete()">Confirm</button>
+  </c-modal-footer>
+</c-modal>
+
