--- a/src/app/views/manager/weight-control/weight-control.component.html
+++ b/src/app/views/manager/weight-control/weight-control.component.html
@@ -118,7 +118,7 @@
                   <button cButton cDropdownToggle color="secondary" size="sm">
                     <svg cIcon name="cil-settings"></svg>
                   </button>
-                  <ul cDropdownMenu>
+                  <ul cDropdownMenu class="position-fixed">
                     <li><button cDropdownItem (click)="editWeight(wh)">Edit</button></li>
                     <li><button cDropdownItem (click)="deleteMode(wh)">Delete</button></li>
                   </ul>
