--- a/src/app/containers/default-layout/default-footer/default-footer.component.html
+++ b/src/app/containers/default-layout/default-footer/default-footer.component.html
@@ -4,8 +4,7 @@
   </div>
   <div class="ms-auto">
     Powered by
-    <a href="https://coreui.io/pro/angular" target="_blank">
+    <a href="https://coreui.io/angular/docs/" target="_blank">
       <span> CoreUI for Angular</span>
     </a>
   </div>
-<!--</c-footer>-->
