--- a/src/app/views/manager/weight-control/weight-control.component.html
+++ b/src/app/views/manager/weight-control/weight-control.component.html
@@ -105,7 +105,19 @@
               <th class="text-center">Actions</th>
             </tr>
           </thead>
-          <tbody>
+
+          <tbody *ngIf="loading">
+            <tr>
+              <td colspan="6" class="text-center">
+                <div class="m-2">
+                  <c-spinner label="Loading..."></c-spinner>
+                </div>
+              </td>
+            </tr>
+          </tbody>
+
+
+          <tbody *ngIf="!loading">
 
             <tr *ngFor="let wh of filteredWeightHistory">
 
