realizada pequenas correções e melhorias

--- a/src/app/views/manager/list-pigs/list-pigs.component.html
+++ b/src/app/views/manager/list-pigs/list-pigs.component.html
@@ -75,6 +75,23 @@
             </tr>
           </tbody>
 
+          <tbody *ngIf="!loading && filteredPigs.length == 0 ">
+            <tr>
+              <td></td>
+              <td></td>
+              <td colspan="2" class="text-center">
+                <div class="m-2">
+                  <svg cIcon name="cilSad"></svg>
+                  <span class="text-medium-emphasis">
+                    Nothing to see here
+                  </span>
+                </div>
+              </td>
+              <td></td>
+              <td></td>
+            </tr>
+          </tbody>
+
           <tbody *ngIf="!loading">
             <tr *ngFor="let pig of filteredPigs; index as i">
 
@@ -121,11 +138,11 @@
               </td>
 
               <td class="text-center">
-                <c-dropdown variant="btn-group" direction="dropup-center">
+                <c-dropdown variant="btn-group" direction="center">
                   <button cButton cDropdownToggle color="secondary" size="sm">
                     <svg cIcon name="cil-settings"></svg>
                   </button>
-                  <ul cDropdownMenu class="position-fixed">
+                  <ul cDropdownMenu>
                     <li><button cDropdownItem (click)="editMode(pig)">Edit</button></li>
                     <li><button cDropdownItem (click)="addWeightMode(pig)">Add Weight</button></li>
                     <li><button cDropdownItem (click)="weightControlMode(pig)">Weight Control</button></li>
@@ -142,17 +159,17 @@
   </c-col>
 </c-row>
 
-<!-- <c-pagination aria-label="Page navigation example">
-              <li cPageItem *ngIf="currentPage > 1">
-                <a cPageLink (click)="onPageChange(currentPage - 1)">Previous</a>
-              </li>
-              <li cPageItem *ngFor="let page of getPageNumbers()">
-                <a cPageLink (click)="onPageChange(page)">{{ page }}</a>
-              </li>
-              <li cPageItem *ngIf="currentPage < totalPages">
-                <a cPageLink (click)="onPageChange(currentPage + 1)">Next</a>
-              </li>
-            </c-pagination> -->
+<c-pagination aria-label="Page navigation example">
+  <li cPageItem *ngIf="currentPage > 1">
+    <a cPageLink (click)="onPageChange(currentPage - 1)">Previous</a>
+  </li>
+  <li cPageItem *ngFor="let page of getPageNumbers()">
+    <a cPageLink (click)="onPageChange(page)">{{ page }}</a>
+  </li>
+  <li cPageItem *ngIf="currentPage < totalPages">
+    <a cPageLink (click)="onPageChange(currentPage + 1)">Next</a>
+  </li>
+</c-pagination>
 
 <c-modal [keyboard]="false" [transition]="false" backdrop="static" class="position-static d-block show"
   id="modalStatic">
