adicionar recurso de manejo sanitário ao sistema

--- a/src/app/containers/default-layout/default-header/default-header.component.html
+++ b/src/app/containers/default-layout/default-header/default-header.component.html
@@ -19,8 +19,13 @@
         </a>
       </c-nav-item>
       <c-nav-item>
-        <a cNavLink routerLink="/manager" routerLinkActive="active">
+        <a cNavLink routerLink="/manager/list-pigs" routerLinkActive="active">
           Manager Pigs
+        </a>
+      </c-nav-item>
+      <c-nav-item>
+        <a cNavLink routerLink="/manager/sanitary-management" routerLinkActive="active">
+          Sanitary Management
         </a>
       </c-nav-item>
     </c-header-nav>
