centralizar elemento de atividades não encontradas

--- a/src/app/views/manager/sanitary-management/sanitary-management.component.html
+++ b/src/app/views/manager/sanitary-management/sanitary-management.component.html
@@ -43,11 +43,11 @@
             </tr>
           </tbody>
 
+          <!-- No activities found -->
           <tbody *ngIf="!loading && filteredActivities.length == 0 ">
             <tr>
               <td></td>
-              <td></td>
-              <td colspan="2" class="text-center">
+              <td class="text-center">
                 <div class="m-2">
                   <svg cIcon name="cilSad"></svg>
                   <span class="text-medium-emphasis">
@@ -55,7 +55,6 @@
                   </span>
                 </div>
               </td>
-              <td></td>
               <td></td>
             </tr>
           </tbody>
