--- a/src/app/views/manager/list-pigs/list-pigs.component.html
+++ b/src/app/views/manager/list-pigs/list-pigs.component.html
@@ -143,10 +143,11 @@
                     <svg cIcon name="cil-settings"></svg>
                   </button>
                   <ul cDropdownMenu>
-                    <li><button cDropdownItem (click)="editMode(pig)">Edit</button></li>
                     <li><button cDropdownItem (click)="addWeightMode(pig)">Add Weight</button></li>
                     <li><button cDropdownItem (click)="weightControlMode(pig)">Weight Control</button></li>
-                    <li><button cDropdownItem (click)="chartMode(pig)">See Chart</button></li>
+                    <li><button cDropdownItem (click)="chartMode(pig)">Weighing Chart</button></li>
+                    <li><button cDropdownItem (click)="pigHistoryMode(pig)">Activities History</button></li>
+                    <li><button cDropdownItem (click)="editMode(pig)">Edit</button></li>
                     <li><button cDropdownItem (click)="deleteMode(pig)">Delete</button></li>
                   </ul>
                 </c-dropdown>
