--- a/src/app/views/dashboard/dashboard.component.html
+++ b/src/app/views/dashboard/dashboard.component.html
@@ -1,104 +1,9 @@
-<c-row class="mt-4">
-  <c-col xs>
-    <c-card class="mb-4">
-      <c-card-header>
-        Selected Pig
-        <button cButton color="primary" class="float-end" size="sm" (click)="weightControl()">Weight Control</button>
-      </c-card-header>
-      <c-card-body>
+<pig-table [pigRef]="pigRef"></pig-table>
 
+<c-nav variant="tabs">
+  <c-nav-item *ngFor="let selector of selectors">
+    <a cNavLink [active]="activeSelector === selector.component" (click)="select(selector.component)">{{selector.name}}</a>
+  </c-nav-item>
+</c-nav>
 
-        <table [hover]="true" [responsive]="true" [striped]="true" align="middle" cTable class="mb-0 border">
-
-          <thead cTableColor="light">
-            <tr>
-              <th class="text-center">
-                <svg cIcon name="cilAnimal"></svg>
-              </th>
-              <th class="text-center">Identifier</th>
-              <th class="text-center">Age</th>
-              <th class="text-center">Parents</th>
-              <th class="text-center">Status</th>
-            </tr>
-          </thead>
-          <tbody>
-
-            <tr>
-
-              <td class="text-center">
-                <c-avatar size="md" src="{{ avatar }}"></c-avatar>
-                <div class="small text-medium-emphasis text-nowrap">
-                  <span>
-                    {{ pigSelected.gender }}
-                  </span>
-                </div>
-              </td>
-
-              <td class="text-center">
-                <div>{{ pigSelected.identifier }}</div>
-              </td>
-
-              <td class="text-center">
-                <div>
-                  Birth: {{ pigSelected.date_birth | formatDate }}
-                </div>
-                <div class="small text-medium-emphasis text-nowrap">
-                  <span>
-                    {{ pigSelected.date_birth | calculateAge }}
-                  </span>
-                </div>
-              </td>
-
-
-              <td class="text-center">
-                <div class="small text-nowrap">
-                  Father ID: {{ pigSelected.father_id }}
-                </div>
-                <div class="small text-nowrap">
-                  Mother ID: {{ pigSelected.mother_id }}
-                </div>
-              </td>
-
-              <td class="text-center">
-                <div>{{ pigSelected.status }}</div>
-                <div class="small text-medium-emphasis text-nowrap">
-                  <span>
-                    Exit: {{ pigSelected.date_exit | formatDate }}
-                  </span>
-                </div>
-              </td>
-            </tr>
-          </tbody>
-        </table>
-
-      </c-card-body>
-    </c-card>
-  </c-col>
-</c-row>
-
-<c-row>
-  <c-col xs>
-    <c-card class="mb-4">
-      <c-card-header>
-        Weight History
-      </c-card-header>
-
-      <c-card-body *ngIf="!loading && existsWeightHistory">
-        <c-chart [data]="data" type="line">
-        </c-chart>
-      </c-card-body>
-
-      <c-card-body *ngIf="loading" class="text-center">
-        <c-spinner label="Loading..."></c-spinner>
-      </c-card-body>
-
-      <c-card-body *ngIf="!existsWeightHistory" class="text-center">
-        <svg cIcon name="cilSad"></svg>
-        <span class="text-medium-emphasis">
-          Nothing to see here
-        </span>
-      </c-card-body>
-
-    </c-card>
-  </c-col>
-</c-row>
+<ng-container *ngComponentOutlet="activeSelector"></ng-container>
